Bug 232871 - Marble fails to load perfectly valid KML file (although it contains <document>-Tags)
Summary: Marble fails to load perfectly valid KML file (although it contains <document...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: 0.8 (KDE 4.3)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-31 18:12 UTC by Stephan Wassipaul
Modified: 2013-10-20 08:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
valid KML file Marble fails to load (1.26 KB, application/vnd.google-earth.kml+xml)
2010-03-31 18:22 UTC, Stephan Wassipaul
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Wassipaul 2010-03-31 18:12:15 UTC
Version:           0.8.5 (using KDE 4.3.5)
OS:                Linux
Installed from:    Mandriva RPMs

I'll add a test file that is, according to http://www.kmlvalidator.com, perfectly valid. Marble cannot open it, error message is:
"[GeoParser::read] -> Error occurred: "Die Datei ist keine gültige KML-Datei in der Version 2.0 / 2.1 / 2.2."                                                    
Could not parse file!"
Google Maps can handle it just fine while Google Earth fails miserably, too.
Comment 1 Stephan Wassipaul 2010-03-31 18:22:46 UTC
Created attachment 42416 [details]
valid KML file Marble fails to load
Comment 2 Dennis Nienhüser 2010-03-31 18:31:33 UTC
Works fine here with the current stable (KDE 4.4.2, Marble 0.9.2) and subversion trunk (revision 1109654). Imports seven placemarks around Vienna.

Can you post your locale settings here, please?
In a shell, run
env | grep 'LC\|LANG'
Comment 3 Stephan Wassipaul 2010-03-31 18:46:20 UTC
wow, that was a fast answer :) 7 placemarks around Vienna is completely correct, that's what the file contains (to make it easier to check I gave each placemark the name of the city it points to).

Sure I can:
[person@localhost Dokumente]$ env | grep 'LC\|LANG'
LC_PAPER=de_AT.UTF-8
LC_ADDRESS=de_AT.UTF-8
LC_MONETARY=de_AT.UTF-8
LC_SOURCED=1
LC_NUMERIC=de_AT.UTF-8
LC_TELEPHONE=de_AT.UTF-8
LC_MESSAGES=de_AT.UTF-8
LC_IDENTIFICATION=de_AT.UTF-8
LC_COLLATE=de_AT.UTF-8
LANG=de_AT.UTF-8
LC_MEASUREMENT=de_AT.UTF-8
LANGUAGE=de_AT.UTF-8:de
LC_CTYPE=de_AT.UTF-8
LC_TIME=de_AT.UTF-8
LC_NAME=de_AT.UTF-8

Seems like this has been fixed since 0.8.5...
Comment 4 Dennis Nienhüser 2010-03-31 19:14:57 UTC
I tried with these settings as well, same result. I'll close the bug; if it does not work in Mandriva after updating to KDE 4.4 or later at some point in the future, please reopen this bug.
Comment 5 Stephan Wassipaul 2010-03-31 20:06:56 UTC
Ok, thank you very much for your quick response! It was quite impressive to see somebody react to my problem so damn fast... :) I'll check this again once I've got KDE 4.4. Thanks again!
Comment 6 Stephan Wassipaul 2010-10-25 19:29:28 UTC
I've now got Marble 0.9.3 and the problem still exists, but not on all maps. On the simple map, as well as on the satellite view everything works perfectly well, but when using OSM Marble neither shows the points from the KML file nor any error message.
I'm not sure whether Marble should be able to show points from KML files on the OSM map, however it should at least give the user some feedback.
Comment 7 Dennis Nienhüser 2010-10-25 20:13:38 UTC
I can reproduce it like that. The kml file is loaded for OSM as well, but the points are not shown in the map because Marble's OSM map theme hides them intentionally. The imported placemarks do show up in the placemark list (Navigation tab) however which you can use to center the map on them (SVN trunk).

I think the remaining question is whether placemarks loaded by the user should override the map theme setting wrt visibility.
Comment 8 Thibaut Gridel 2010-11-04 23:08:32 UTC
SVN commit 1193165 by tgridel:

show user places if places property is true

BUG: 232871

 M  +9 -1      data/maps/earth/openstreetmap/openstreetmap.dgml  
 M  +1 -1      src/lib/MarbleModel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1193165