show user places if places property is true

BUG: 232871

svn path=/trunk/KDE/kdeedu/marble/; revision=1193165